Fix the main accent on Firefox

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -211,6 +211,7 @@ table {
     right: 0;
     bottom: -5.5em;
     z-index: 4;
+    width: 50%;
 
     img {
       max-height: 100%;
